[package]
name = "keyberon-grid"
version = "0.1.0"
authors = ["Guillaume Pinot <texitoi@texitoi.eu>", "Robin Krahl <robin.krahl@ireas.org>"]
edition = "2018"

[dependencies]
keyberon = { git = "https://github.com/TeXitoi/keyberon" }
stm32f1xx-hal = { version = "0.5", features = ["rt", "stm32f103", "stm32-usbd"] }
cortex-m = "0.6"
cortex-m-rt = { version = "0.6.6", features = ["device"] }
panic-halt = "0.2"
cortex-m-rtfm = "0.5"
generic-array = "0.13"
embedded-hal = "0.2"
usb-device = "0.2.0"

[profile.release]
lto = true
incremental = false
opt-level = "z"
debug = true
