[package]
name = "keyberon-grid"
version = "0.1.0"
authors = ["Guillaume Pinot <texitoi@texitoi.eu>", "Robin Krahl <robin.krahl@ireas.org>"]
edition = "2018"

[dependencies]
keyberon = { git = "https://github.com/TeXitoi/keyberon", rev = "a423de29a9cf0e9e4d3bdddc6958657662c46e01" }
stm32f1xx-hal = { version = "0.10.0", features = ["rt", "stm32f103", "stm32-usbd"] }
cortex-m = "0.7"
cortex-m-rt = { version = "0.7", features = ["device"] }
panic-halt = "0.2"
cortex-m-rtic = "1.1.4"
embedded-hal = "0.2"
usb-device = "0.2.0"

[profile.release]
lto = true
incremental = false
opt-level = "z"
debug = true
